config-root/namespaces/jx-production/stocks-ui/stocks-ui-stocks-ui-deploy.yaml
# Source: stocks-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stocks-ui-stocks-ui
  labels:
    draft: draft-app
    chart: "stocks-ui-0.0.5"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'stocks-ui'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: stocks-ui-stocks-ui
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: stocks-ui-stocks-ui
    spec:
      serviceAccountName: stocks-ui-stocks-ui
      containers:
        - name: stocks-ui
          image: "gcr.io/corded-imagery-343815/stocks-ui:0.0.5"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
